[project]
name = "landing-page-template"
version = "0.1.0"
description = ""
authors = [
    {name = "kit57"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit (>=1.45.1,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "openai (>=1.86.0,<2.0.0)",
    "langfuse>=3.0.8",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
